add description of refed discrepancies

--- a/Rmd/four_interventions.Rmd
+++ b/Rmd/four_interventions.Rmd
@@ -85,7 +85,13 @@ In Figures 5-9, the solid circles with uncertainty bars are our results, and the
 
 The most notable results here are that ReFED is uniformly more optimistic in terms of the total cost of adopting the intervention everywhere practicable. This is especially true for WTA software and consumer education campaigns. However, we estimate that much more GHG emissions will be reduced by implementing WTA and spoilage prevention, compared to ReFED's estimate. Our GHG estimates are much closer for standardized date labeling and consumer education. Due to these discrepancies, the cost-effectiveness of GHG reduction is estimated by us to be much lower for date labeling changes and consumer education, higher for packaging changes, and fairly close for WTA (between our estimates for restaurants and contractors which makes sense). When it comes to water use, our results are a lot more pessimistic for cost-effectiveness, and generally lower for total water use reduced.
 
-The discrepancies are probably due to (1) differences in methodology (input-output model to find impacts versus other methods, and whatever idiosyncrasies of the USEEIO model are baked into our methods), (2) ReFED likely being overly optimistic about costs or not fully accounting for some of the costs, and (3) somewhat different assumptions about the effectiveness of the interventions, or what percent of waste they may reduce. We did adopt some of ReFED's assumptions but not others.
+### Possible reasons for mismatch between our results and ReFED
+
+The discrepancies are probably due to (1) differences in methodology (input-output model to find impacts versus ReFED's LCA-based approach &mdash; see below, and whatever idiosyncrasies of the USEEIO model are baked into our methods), (2) ReFED likely being overly optimistic about costs or not fully accounting for some of the costs, and (3) somewhat different assumptions about the effectiveness of the interventions, or what percent of waste they may reduce. We did adopt some of ReFED's assumptions but not others.
+
+ReFED's approach to calculating the GHG reduction due to food waste reduction is based on a life-cycle assessment (LCA) study, specifically Heller and Keoleian (2015, Journal of Industrial Ecology; cited in ReFED's technical appendix document on pp. 54-55). The Heller study did a meta-analysis of published LCA studies to get GHG emissions of many individual food items. ReFED averaged these into their five main food categories (grain, meat, fruit&veg, seafood, dairy). This is a "bottom-up" approach starting with individual food types and aggregating, whereas the I-O method is a "top-down" approach. The LCA approach has to draw a tighter boundary in terms of which emissions are accounted for, so that might be why they have somewhat lower estimates for GHG. Another difference is that ReFED specifically accounts for GHG emissions avoided from gases emitted when wasted food is landfilled and decays. This would increase their estimates of GHG avoided, but theirs are still much lower than ours.
+
+For water use, ReFED's estimates are based on crop and livestock water footprint data from the Water Footprint Network (Mekonnen & Hoekstra 2010, cited in the technical appendix on p. 56). The underlying method there is a fairly sophisticated material flow analysis, which draws on many data sources primarily FAOSTAT. Our estimates for total water conserved are sometimes higher than ReFED's and sometimes lower, with differences probably mainly due to differences in estimates for how much waste is reduced.
 
 ## Comparison to "McKinsey curve"
 
